fix(favorite): to fit better on mobile phones

--- a/src/pages/favorites/favorites.module.css
+++ b/src/pages/favorites/favorites.module.css
@@ -1,7 +1,6 @@
 .favoritesContainer {
   width: 100vw;
   min-height: 100vh;
-  padding: 2rem;
   color: white;
   display: flex;
   flex-direction: column;
